--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,5 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<h3>Title:</h3>
+<%= @book.title %>
+
+<h3>Body:</h3>
+<%= @book.body %>
