--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,21 @@
 <h1>Books</h1>
 
 <% @books.each do |book| %>
-  
+  <p>Title</p>
+  <span><%= book.title %></span>
+  <p>Body</p>
+  <span><%= book.body %></span>
+  <span><%= link_to "show", "/books/#{book.id}" %></span>
+<% end %>
+
+<h3>New book</h3>
+
+<%= form_with model: @book do |f| %>
+  <h4>Title</h4>
+  <%= f.text_field :title %>
+
+  <h4>Body</h4>
+  <%= f.text_area :body %>
+
+  <%= f.submit 'Create Book' %>
+<% end %>
