--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,4 +1,14 @@
 <h1>Editing Book</h1>
 
 <%= form_with model: @book do |f| %>
+  <p>Title</p>
+  <%= f.text_field :title %>
+  <p>Body</p>
+  <%= f.text_area :body %>
+  <%= f.submit 'Update Book' %>
 <% end %>
+<p>
+<span><%= link_to "Show", book_path(@book) %></span>
+|
+<span><%= link_to "Back", "/books" %></span>
+</p>
