--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,22 +1,24 @@
 <h1>Books</h1>
 
-<% @books.each do |book| %>
-  <table>
+<table>
   <thead>
       </tr>
         <th><p>Title</p></th>
         <th><p>Body</p></th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <td><span><%= book.title %></span></td>
-        <td><span><%= book.body %></span></td>
-        <td><span><%= link_to "show", "/books/#{book.id}" %></span></td>
-      </tr>
+      <% @books.each do |book| %>
+        <tr>
+          <td><span><%= book.title %></span></td>
+          <td><span><%= book.body %></span></td>
+          <td><span><%= link_to "Show", book_path(book.id) %></span></td>
+          <td><span><%= link_to "Edit", edit_book_path(book) %></span></td>
+        </tr>
+      <% end %>
     </tbody>
   </table>
-<% end %>
 
 <h3>New book</h3>
 
