--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -14,7 +14,8 @@
           <td><span><%= book.title %></span></td>
           <td><span><%= book.body %></span></td>
           <td><span><%= link_to "Show", book_path(book.id) %></span></td>
-          <td><span><%= link_to "Edit", edit_book_path(book) %></span></td>
+          <td><span><%= link_to "Edit", edit_book_path(@book) %></span></td>
+          <td><%= link_to "Destroy", book_path(@book.id), method: :delete, "date-confirm" => "Are you sure?" %></td>
         </tr>
       <% end %>
     </tbody>
