--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,28 +2,30 @@
 
 <table>
   <thead>
+    <tr>
+      <th><p>Title</p></th>
+      <th><p>Body</p></th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @books.each do |book| %>
+      <tr>
+        <td><%= book.title %></td>
+        <td><%= book.title %></td>
+        <td><%= link_to "Show", book_path(book.id) %></td>
+        <td><%= link_to "Edit", edit_book_path(book.id) %></td>
+        <td><%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
       </tr>
-        <th><p>Title</p></th>
-        <th><p>Body</p></th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @books.each do |book| %>
-        <tr>
-          <td><span><%= book.title %></span></td>
-          <td><span><%= book.body %></span></td>
-          <td><span><%= link_to "Show", book_path(book.id) %></span></td>
-          <td><span><%= link_to "Edit", edit_book_path(book.id) %></span></td>
-          <td><%= link_to "Destroy", "/books", method: :delete, "data-confirm" => "Are you sure?" %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
+    <% end %>
+  </tbody>
+</table>
+
 
 <h3>New book</h3>
 
 <%= form_with model: @book do |f| %>
+
   <h4>Title</h4>
   <%= f.text_field :title %>
 
@@ -31,4 +33,4 @@
   <%= f.text_area :body %>
 
   <%= f.submit 'Create Book' %>
-<% end %>
+<% end %> 
