--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -23,6 +23,14 @@
 
 
 <h3>New book</h3>
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>erroes prohibited this book from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
 
 <%= form_with model: @book do |f| %>
 
@@ -33,4 +41,4 @@
   <%= f.text_area :body %>
 
   <%= f.submit 'Create Book' %>
-<% end %> 
+<% end %>
