フラッシュメッセージ完了

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,3 +1,4 @@
+<div class="show">
 <p>
 <strong>Title:</strong>
 <%= @book.title %>
@@ -12,3 +13,4 @@
 |
 <span><%= link_to "Back", "/books" %></span>
 </p>
+</div>
