--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,15 +1,33 @@
+<div class="edit">
 <h1>Editing Book</h1>
-
-<%= form_with model: @book do |f| %>
-  <p>Title</p>
-  <%= f.text_field :title %>
-  <p>Body</p>
-  <%= f.text_area :body %>
-  <%= f.submit 'Update Book' %>
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>erroes prohibited this book from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
 <% end %>
 
-<p>
-<span><%= link_to "Show", book_path(@book) %></span>
-|
-<span><%= link_to "Back", "/books" %></span>
-</p>
+<%= form_with model: @book do |f| %>
+  <div class="field">
+    <p>Title</p>
+  </div>
+  <%= f.text_field :title %>
+  <div class="area">
+    <p>Body</p>
+  </div>
+  <%= f.text_area :body %>
+  <div class="action">
+    <%= f.submit 'Update Book' %>
+  </div>
+<% end %>
+
+  <div class="link">
+    <p>
+    <span><%= link_to "Show", book_path(@book) %></span>
+    |
+    <span><%= link_to "Back", "/books" %></span>
+    </p>
+  </div>
+</div>
