--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,4 @@
+<div class="index">
 <h1>Books</h1>
 
 <table>
@@ -13,9 +14,21 @@
       <tr>
         <td><%= book.title %></td>
         <td><%= book.title %></td>
-        <td><%= link_to "Show", book_path(book.id) %></td>
-        <td><%= link_to "Edit", edit_book_path(book.id) %></td>
-        <td><%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
+        <td>
+          <div class="link">
+            <%= link_to "Show", book_path(book.id) %>
+          </div>
+        </td>
+        <td>
+          <div class="link">
+            <%= link_to "Edit", edit_book_path(book.id) %>
+          </div>
+        </td>
+        <td>
+          <div class="link">
+            <%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %>
+          </div>
+        </td>
       </tr>
     <% end %>
   </tbody>
@@ -33,12 +46,17 @@
 <% end %>
 
 <%= form_with model: @book do |f| %>
-
-  <h4>Title</h4>
+  <div class="field">
+    <p>Title</p>
+  </div>
   <%= f.text_field :title %>
 
-  <h4>Body</h4>
+  <div class="area">
+    <p>Body</p>
+  </div>
   <%= f.text_area :body %>
-
-  <%= f.submit 'Create Book' %>
+  <div class="action">
+    <%= f.submit 'Create Book' %>
+  </div>
 <% end %>
+</div>
