--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,4 +1,5 @@
-<h2>ようこそ Bookersへ!</h2>
-<p>bookersでは、さまざまな書籍に関するあなたの意見や</p>
+<div class="bookers">
+<h1>ようこそ <strong>Bookers</strong>へ!</h1>
+<p><strong>bookers</strong>では、さまざまな書籍に関するあなたの意見や</p>
 <p>印象を共有し交換することができます</p>
 <%= link_to "start", "/books" %>
