--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,5 +1,14 @@
-<div class="bookers">
-<h1>ようこそ <strong>Bookers</strong>へ!</h1>
-<p><strong>bookers</strong>では、さまざまな書籍に関するあなたの意見や</p>
-<p>印象を共有し交換することができます</p>
-<%= link_to "start", "/books" %>
+<div class="top">
+  <div class="top-1">
+  <h1>ようこそ <strong>Bookers</strong>へ!</h1>
+  </div>
+  <div class="top-2">
+    <span><p><strong>Bookers</strong>では、さまざまな書籍に関するあなたの意見や</p></span>
+  </div>
+  <div class="top-2">
+    <span><p>印象を共有し交換することができます</p></span>
+  </div>
+  <div class="top-2">
+    <span><%= link_to "start", "/books" %></span>
+  </div>
+</div>
