--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,38 +1,40 @@
 <div class="index">
-<h1>Books</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th><p>Title</p></th>
-      <th><p>Body</p></th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @books.each do |book| %>
+  <div class="index-1">
+    <h1>Books</h1>
+  </div>
+  
+  <table>
+    <thead>
       <tr>
-        <td><%= book.title %></td>
-        <td><%= book.title %></td>
-        <td>
-          <div class="link">
-            <%= link_to "Show", book_path(book.id) %>
-          </div>
-        </td>
-        <td>
-          <div class="link">
-            <%= link_to "Edit", edit_book_path(book.id) %>
-          </div>
-        </td>
-        <td>
-          <div class="link">
-            <%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %>
-          </div>
-        </td>
+        <th><p>Title</p></th>
+        <th><p>Body</p></th>
+        <th></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% @books.each do |book| %>
+        <tr>
+          <td><%= book.title %></td>
+          <td><%= book.title %></td>
+          <td>
+            <div class="link">
+              <%= link_to "Show", book_path(book.id) %>
+            </div>
+          </td>
+          <td>
+            <div class="link">
+              <%= link_to "Edit", edit_book_path(book.id) %>
+            </div>
+          </td>
+          <td>
+            <div class="link">
+              <%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %>
+            </div>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
 
 <h3>New book</h3>
