--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,7 @@
  *= require_self
  */
 
-* {
+ * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -29,7 +29,7 @@ a:hover {
   background-color: black;
 }
 
-.top, .index, .show, .edit {
+.top, .index, .show, .edit, .flash-message {
   font-family: verbana, Arial, Helvetica, sans-serif;
 }
 
@@ -52,19 +52,95 @@ main {
 }
 
 .index {
-  margin: 20px;
-}
-
-.show {
   margin: 30px;
 }
 
-.show-1 {
-  margin: 0px 0px 30px 40px;
+.index-1 {
   font-size: 14px;
+}
+
+table {
+  margin: 10px;
+  line-height: 1.5;
+  font-size: 13px;
+  border-collapse: separate;
+  border-spacing: 10px;
+}
+
+.index-2 {
+  margin-top: 30px;
+  font-size: 14px;
+}
+
+.index-3 {
+  margin-top: 15px;
+  font-size: 14px;
+  letter-spacing: 1px;
+}
+
+.index-4 {
+  margin-top: 15px;
+  font-size: 14px;
+}
+
+.index-5 {
+  margin-top: 15px;
+}
+
+.show {
+  margin-top: 30px;
+}
+
+.show-1 {
+  margin: 0px 0px 30px 70px;
+  font-size: 14px;
+  letter-spacing: 1px;
 }
 
 .show-2 {
   font-size: 14px;
-  margin: 5px;
+  margin-left: 40px;
+}
+
+.edit {
+  margin: 30px;
+}
+
+.edit-1 {
+  font-size: 14px;
+}
+
+.edit-2 {
+  margin-top: 15px;
+  font-size: 14px;
+  letter-spacing: 1px;
+}
+
+.edit-3 {
+  margin-top: 15px;
+  font-size: 14px;
+}
+
+.edit-4 {
+  margin-top: 15px;
+}
+
+.edit-5 {
+  margin-top: 10px;
+  font-size: 14px;
+}
+
+.flash-message {
+  margin: 30px 70px;
+  color: green;
+  font-size: 14px;
+}
+
+.error {
+  margin: 20px;
+  color: red;
+}
+
+ul {
+  margin: 20px 70px;
 }
