--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,12 +2,11 @@
   <div class="index-1">
     <h1>Books</h1>
   </div>
-  
   <table>
     <thead>
       <tr>
-        <th><p>Title</p></th>
-        <th><p>Body</p></th>
+        <th class="th-title"><p>Title</p></th>
+        <th class="th-body"><p>Body</p></th>
         <th></th>
       </tr>
     </thead>
@@ -15,50 +14,47 @@
       <% @books.each do |book| %>
         <tr>
           <td><%= book.title %></td>
-          <td><%= book.title %></td>
+          <td><%= book.body %></td>
           <td>
-            <div class="link">
-              <%= link_to "Show", book_path(book.id) %>
-            </div>
+            <%= link_to "Show", book_path(book.id) %>
           </td>
           <td>
-            <div class="link">
-              <%= link_to "Edit", edit_book_path(book.id) %>
-            </div>
+            <%= link_to "Edit", edit_book_path(book.id) %>
           </td>
           <td>
-            <div class="link">
-              <%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %>
-            </div>
+            <%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => "Are you sure?" %>
           </td>
         </tr>
       <% end %>
     </tbody>
   </table>
 
-
-<h3>New book</h3>
-<% if @book.errors.any? %>
-  <%= @book.errors.count %>erroes prohibited this book from being saved:
-  <ul>
-    <% @book.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
+  <div class="index-2">
+    <h2>New book</h2>
+  </div>
+  <div class="error">
+    <% if @book.errors.any? %>
+    <%= @book.errors.count %>erroes prohibited this book from being saved:
+      <ul>
+        <% @book.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
     <% end %>
-  </ul>
-<% end %>
+  </div>
 
-<%= form_with model: @book do |f| %>
-  <div class="field">
-    <p>Title</p>
-  </div>
-  <%= f.text_field :title %>
-
-  <div class="area">
-    <p>Body</p>
-  </div>
-  <%= f.text_area :body %>
-  <div class="action">
-    <%= f.submit 'Create Book' %>
-  </div>
-<% end %>
+  
+  <%= form_with model: @book do |f| %>
+    <div class="index-3">
+      <p>Title</p>
+      <%= f.text_field :title %>
+    </div>
+    <div class="index-4">
+      <p>Body</p>
+      <%= f.text_area :body %>
+    </div>
+    <div class="index-5">
+      <%= f.submit 'Create Book' %>
+    </div>
+  <% end %>
 </div>
